# robust-siting-lab

./: .gitignore  AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
benchmarks/: schema.json  toy_public.json
docs/: first-pr.md
reports/: toy_public.jsonl
results/: toy_public.json
robust_siting_lab/: __init__.py  __main__.py  cli.py  model.py  scoring.py
scripts/: regret_reported.py  sources_only_public.py  spec_check.py  validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
tests/: test_cli.py  test_model.py
