[project]
name = "robust-siting-lab"
version = "0.1.0"
description = "small reproducible benchmark for joint grid, water, and silicon siting risk"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
robust-siting-lab = "robust_siting_lab.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robust_siting_lab"]
